--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="up">
-            <input type="number" placeholder="Type number"> 
+            <input type="number" class="numbers" placeholder="Type number"> 
             <button class="add" onclick="add()" > + </button>
             <button class="calculate" onclick="calculate()">Calcular </button>
         </div>
